--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
-    "gitignore": "^0.7.0"
+    "gitignore": "^0.7.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
